<resources>
    <string name="app_name">ApplicationJSONCovid</string>
    <string name="date">Date d\'inquet</string>
    <string name="date2">Date d\'\'inquiet</string>
    <string name="date3">Date de recherche</string>
    <string name="prov">Province</string>
    <string name="search">Rechercher</string>
    <string name="cases">Cases Actifs:</string>
    <string name="change">Change total au cases actifs:</string>
    <string name="morts">Morts:</string>
    <string name="newi">Nouvelles infections:</string>
    <string name="rec">Guéri</string>
    <string name="reco">Guéri:</string>
    <string name="zero">0</string>
    <string name="zero2">"  0  "</string>
    <string name="sampleText">Donnez le jour mois (sans accent) et annee. Exemple: 2 Fevrier 2021</string>
    <string name="newel">Nouvelles infections:</string>
</resources>